# hooks

./: .gitcommit  commit-msg  lefthook.toml  post-commit  pre-commit  pre-push  pyproject.toml  ruff.toml
commit_msg/: commit_msg.py
tests/: test_commit_msg.py
