[project]
dependencies    = []
name            = "git-hooks"
requires-python = ">=3.10"
version         = "0.0.0"

[project.optional-dependencies]
dev  = ["pytest-cov>=4.1", "pytest>=8.3", "ruff>=0.5.7"]
test = ["pytest-cov>=4.1", "pytest>=8.3"]

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.uv]
dev-dependencies = ["pytest-cov>=4.1", "pytest>=8.3", "ruff>=0.5.7"]
